--- a/css/kasper.css
+++ b/css/kasper.css
@@ -14,6 +14,7 @@ html {
 
 body {
     font-family: "Open Sans", sans-serif;
+    background-color: black;
 }
 
 ul {
@@ -50,5 +51,32 @@ ul {
 	}
 }
 
-
 /* end global rules */
+/* start header */
+
+header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+header .container::after {
+    content:"";
+    position: absolute;
+    height: 1px;
+    background-color: #a2a2a2;
+    bottom: 0;
+    width: calc(100% - 30px);
+    left: 15px;
+}
+
+header img {
+    height: 40px;
+}
+
+header nav {
+    flex: 1;
+}
+
+/* end  header*/
