--- a/css/kasper.css
+++ b/css/kasper.css
@@ -1,3 +1,11 @@
+/* start global variables */
+
+:root {
+    --main-color: #19c8fa;
+}
+
+/* end global variables */
+
 /* set global rules */
 
 * {
@@ -66,7 +74,7 @@ header .container::after {
     position: absolute;
     height: 1px;
     background-color: #a2a2a2;
-    bottom: 0;
+    bottom: -1px;
     width: calc(100% - 30px);
     left: 15px;
 }
@@ -77,6 +85,44 @@ header img {
 
 header nav {
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
+header nav ul {
+    display: flex;
+}
+
+header nav ul li a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 40px 10px;
+    transition: 0.3s;
+    font-size:  14px;
+}
+
+header nav ul li a.active,
+header nav ul li a:hover {
+    color : var(--main-color);
+    border-bottom: 1px solid var(--main-color);
+}
+
+header .form {
+    width: 40px;
+    height: 30px;
+    border-left: 1px solid white;
+    position: relative;
+    margin-left: 30px;
+}
+
+header .form i {
+    color: white;
+    position: absolute;
+    top: 50%;
+    font-size: 20px;
+    transform: translateY(-50%);
+    right: 0;
+}
 /* end  header*/
