--- a/css/kasper.css
+++ b/css/kasper.css
@@ -2,6 +2,7 @@
 
 :root {
     --main-color: #19c8fa;
+	--transparent-color: rgb(15 116 143 / 70%);
 }
 
 /* end global variables */
@@ -163,3 +164,53 @@ header .form i {
     right: 0;
 }
 /* end  header*/
+
+/* start landing  */
+
+.landing {
+	min-height: 100vh;
+	background-color: #1f2021;
+	background-image: url(../images/landing_2.jpg);
+	background-size: cover;
+	position: relative;
+}
+
+.landing .overlay {
+	background-color: rgb(0 0 0 / 50%);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+}
+
+.landing .text {
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 50%;
+	padding: 50px;
+	background-color: var(--transparent-color);
+	color: white;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.landing .text .content {
+	max-width: 500px;
+}
+
+.landing .text .content h2 {
+	font-weight: normal;
+	font-size: 32px;
+	line-height: 1.5;
+	margin-bottom: 20px;
+}
+
+.landing .text .content p {
+	font-size: 14px;
+	line-height: 1.7;
+}
+
+/* end landing  */
