landing part: add some tips and make it responsive

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -197,8 +197,18 @@ header .form i {
 	justify-content: flex-end;
 }
 
+
 .landing .text .content {
 	max-width: 500px;
+}
+
+@media (max-width: 767px) {
+	.landing .text {
+		width: 100%;
+	}
+	.landing .text .content {
+		max-width: 100%;
+	}
 }
 
 .landing .text .content h2 {
@@ -211,6 +221,51 @@ header .form i {
 .landing .text .content p {
 	font-size: 14px;
 	line-height: 1.7;
+}
+
+.landing .change-background {
+	position: absolute;
+	color: white;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+@media (max-width: 767px) {
+	.landing .text {
+		width: 100%;
+	}
+
+	.landing .change-background {
+		display: none;
+	}
+}
+
+.landing .fa-angle-left {
+	left: 20px;
+}
+.landing .fa-angle-right {
+	right: 20px;
+}
+
+.landing .bullets {
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: 30px;
+	display: flex;
+}
+
+.landing .bullets li {
+	width: 20px;
+	height: 20px;
+	border: 1px solid white;
+	border-radius: 50%;
+	margin-right: 10px;
+}
+
+.landing .bullets li.active {
+	background-color: var(--main-color);
+	border-color: var(--main-color);
 }
 
 /* end landing  */
