--- a/css/kasper.css
+++ b/css/kasper.css
@@ -23,7 +23,6 @@ html {
 
 body {
 	font-family: "Open Sans", sans-serif;
-	background-color: black;
 }
 
 ul {
@@ -61,6 +60,60 @@ ul {
 }
 
 /* end global rules */
+
+/* start component  */
+
+.section {
+	padding : 40px;
+}
+
+.main-heading {
+	text-align: center;
+}
+
+.main-heading h2 {
+	font-weight: normal;
+	font-size: 40px;
+	text-transform: uppercase;
+	margin-bottom: 70px;
+	position: relative;
+}
+
+.main-heading h2::before {
+	content: '';
+    position: absolute;
+    height: 2px;
+    width: 130px;
+    background-color: #333;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -30px;
+
+}
+
+.main-heading h2::after {
+	content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 14px;
+    width: 14px;
+    border-radius: 50%;
+    border: 2px solid #333;
+    bottom: -38px;
+    background-color: white;
+}
+
+.main-heading p {
+	width: 550px;
+	margin: 0 auto 100px;
+	max-widht: 100%;
+	line-height: 2;
+	color: #777;
+}
+
+/* end component  */
+
 /* start header */
 
 header {
