--- a/css/kasper.css
+++ b/css/kasper.css
@@ -3,6 +3,7 @@
 :root {
 	--main-color: #19c8fa;
 	--transparent-color: rgb(15 116 143 / 70%);
+	--section-padding: 100px
 }
 
 /* end global variables */
@@ -33,7 +34,7 @@ ul {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: auto;
-	margin-top: auto;
+	margin-right: auto;
 }
 
 /* ---------- media queries ---------- */
@@ -70,20 +71,20 @@ ul {
 .main-heading h2 {
 	font-weight: normal;
 	font-size: 40px;
-	text-transform: uppercase;
-	margin-bottom: 70px;
 	position: relative;
+	margin-bottom: 70px;
+	text-transform: uppercase;
 }
 
 .main-heading h2::before {
 	content: '';
 	position: absolute;
-	height: 2px;
-	width: 130px;
-	background-color: #333;
 	left: 50%;
 	transform: translateX(-50%);
+	height: 2px;
+	background-color: #333;
 	bottom: -30px;
+	width: 130px;
 
 }
 
@@ -119,7 +120,7 @@ header {
 	z-index: 2;
 }
 
-header .container{
+header .container {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -132,12 +133,12 @@ header .container::after {
 	position: absolute;
 	height: 1px;
 	background-color: #a2a2a2;
-	bottom: -1px;
+	bottom: 0;
 	width: calc(100% - 30px);
 	left: 15px;
 }
 
-header img {
+header .logo img {
 	height: 40px;
 }
 
@@ -174,7 +175,7 @@ header nav ul {
 		width: 100%;
 		left: 0;
 		top: 100%;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: rgb(0 0 0 / 50%);
 	}
 		header nav ul li a {
 		padding: 15px !important;
@@ -188,6 +189,8 @@ header nav ul li a {
 	padding: 40px 10px;
 	transition: 0.3s;
 	font-size:  14px;
+	position: relative;
+	z-index: 2;
 }
 
 header nav ul li a.active,
@@ -196,7 +199,7 @@ header nav ul li a:hover {
 	border-bottom: 1px solid var(--main-color);
 }
 
-header .form {
+header nav .form {
 	width: 40px;
 	height: 30px;
 	border-left: 1px solid white;
@@ -204,12 +207,12 @@ header .form {
 	margin-left: 30px;
 }
 
-header .form i {
+header nav .form i {
 	color: white;
 	position: absolute;
 	top: 50%;
-	font-size: 20px;
 	transform: translateY(-50%);
+	font-size: 20px;
 	right: 0;
 }
 /* end  header*/
@@ -225,12 +228,12 @@ header .form i {
 }
 
 .landing .overlay {
-	background-color: rgb(0 0 0 / 50%);
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	left: 0;
 	top: 0;
+	background-color: rgb(0 0 0 / 50%);
 }
 
 .landing .text {
@@ -277,12 +280,13 @@ header .form i {
 	color: white;
 	top: 50%;
 	transform: translateY(-50%);
+	color: #ddd;
 }
 
 @media (max-width: 767px) {
-	.landing .text {
+	/* .landing .text {
 		width: 100%;
-	}
+	} */
 
 	.landing .change-background {
 		display: none;
@@ -318,3 +322,125 @@ header .form i {
 }
 
 /* end landing  */
+
+/* start services */
+
+.services {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+}
+
+@media (min-width: 768px) {
+	.services .srv-container {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+		column-gap: 40px;
+		row-gap: 60px;
+		justify-items: center;
+	}
+
+}
+
+.services .srv-box {
+	display: flex;
+}
+
+.services .srv-box i {
+	margin-right: 50px;
+}
+
+@media (max-width: 767px) {
+	.services .srv-box {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		margin-bottom: 40px;
+	}
+	.services .srv-box i {
+		margin: 0 0 30px;
+	}
+}
+
+.services .srv-box h3 {
+	margin-bottom: 30px;
+	color: var(--main-color);
+}
+
+.services .srv-box p {
+	line-height: 2;
+	color: #777;
+}
+
+/* end services */
+
+/* start design style */
+
+.design {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+	height: 600px;
+	position: relative;
+	background-image: url("../images/design-img.jpg");
+	background-size: cover;
+	display: flex;
+	align-items: center;
+	overflow: hidden;
+}
+.design::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background-color: rgb(0 0 0 / 50%);
+}
+
+.design .image, 
+.design .text {
+	position: relative;
+	z-index: 2;
+	flex: 1;
+}
+
+.design .image {
+	text-align: center;
+}
+
+@media (max-width: 767px) {
+	.design .image {
+		display: none;
+	}
+}
+
+.design .image img {
+	position: relative;
+	bottom: -150px;
+}
+
+.design .text {
+	color: white;
+	padding: 50px;
+	background-color: var(--transparent-color);
+}
+
+.design .text h2 {
+	font-weight: normal;
+	margin-bottom: 40px;
+	text-transform: uppercase;
+}
+
+.design .text ul li {
+	padding: 15px 0;
+}
+
+.design .text ul li::before {
+	font-family: "Font Awesome 5 Free";
+	content: "\f108";
+	font-weight: 900;
+	margin-right: 20px;
+	position: relative;
+	top: 1px;
+}
+
+/* end design style */
