add portfolio section html and css

--- a/css/kasper.css
+++ b/css/kasper.css
@@ -380,7 +380,7 @@ header nav .form i {
 	padding-bottom: var(--section-padding);
 	height: 600px;
 	position: relative;
-	background-image: url("../images/design-img.jpg");
+	background-image: url(../images/design-img.jpg);
 	background-size: cover;
 	display: flex;
 	align-items: center;
@@ -442,5 +442,37 @@ header nav .form i {
 	position: relative;
 	top: 1px;
 }
-
 /* end design style */
+
+/* start Portfolio */
+
+.portfolio {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+}
+
+.portfolio .shuffle {
+	display: flex;
+	justify-content: center;
+}
+
+.portfolio .shuffle li {
+	padding: 10px;
+}
+
+.portfolio .shuffle a {
+	text-decoration: none;
+	color: black;
+}
+
+.portfolio .shuffle li.active {
+	background-color: var(--main-color);
+	color: white;
+}
+
+.portfolio .shuffle li:hover {
+	background-color: var(--main-color);
+	color: white;
+}
+
+/* end Portfolio */
