--- a/css/kasper.css
+++ b/css/kasper.css
@@ -475,4 +475,67 @@ header nav .form i {
 	color: white;
 }
 
+.portfolio .portfolio-imgs-container {
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 60px;
+}
+
+.portfolio .portfolio-imgs-container .portfolio-box {
+	position: relative;
+	overflow: hidden;
+}
+
+.portfolio .portfolio-imgs-container .portfolio-box:hover .caption {
+	bottom: 0;
+}
+
+.portfolio .portfolio-imgs-container .portfolio-box:hover img {
+	transform: rotate(3deg) scale(1.1);
+}
+
+@media (min-width: 768px) {
+	.portfolio .portfolio-imgs-container .portfolio-box {
+		flex-basis: 50%;
+	}
+}
+
+@media (min-width: 1199px) {
+	.portfolio .portfolio-imgs-container .portfolio-box {
+		flex-basis: 25%;
+	}
+}
+
+.portfolio .portfolio-imgs-container .portfolio-box img{
+	max-width: 100%;
+	transition: 0.3s;
+}
+
+.portfolio .portfolio-imgs-container .portfolio-box .caption {
+	position: absolute;
+	left: 0;
+	bottom: -100%;
+	background-color:var(--main-color);
+	color: white;
+	width: 100%;
+	transition: 0.3s;
+	padding: 20px;
+}
+
+.portfolio .portfolio-imgs-container .caption h4 {
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.portfolio .more {
+	background-color: var(--main-color);
+	padding: 15px 20px;
+	color: white;
+	display: block;
+	width: fit-content;
+	margin: 30px auto;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
 /* end Portfolio */
