--- a/css/kasper.css
+++ b/css/kasper.css
@@ -539,3 +539,77 @@ header nav .form i {
 }
 
 /* end Portfolio */
+
+/* start video section style*/
+
+.video {
+	position: relative;
+}
+
+.video::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0 0 0 / 40% );
+}
+
+.video video {
+	width: 100%;
+}
+
+.video .text {
+	width: 100%;
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	padding: 50px;
+	background-color: var(--transparent-color);
+	color: white;
+	text-align: center;
+}
+
+.video .text h2 {
+	margin: 0 0 30px;
+	font-weight: normal;
+	text-transform: uppercase;
+}
+
+.video .text p {
+	margin-bottom: 30px;
+}
+
+.video button {
+	background-color: black;
+	color: white;
+	text-transform: uppercase;
+	padding: 10px 20px;
+	border: none;
+}
+/* end video section style */
+
+/* start about section style */
+
+.about {
+	margin-top: var(--section-padding);
+	overflow: hidden;
+	text-align: center;
+}
+
+.about img {
+	position: relative;
+	bottom: -120px;
+	margin-top: -120px;
+	width: 100%;
+}
+
+@media (max-width: 767px) {
+	.about img {
+		bottom: -60px;
+		margin-top: -60px;
+	}
+}
+/* end about section style */
