--- a/css/kasper.css
+++ b/css/kasper.css
@@ -686,5 +686,93 @@ header nav .form i {
 .stats .container .box p {
 	font-size: 14px;
 }
-
 /* end stats section style */
+/* start skills section style */
+
+.skills {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+}
+
+.skills .container {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+@media (min-width: 992px) {
+	.skills .container > div {
+		flex-basis: 45%;
+	}
+}
+
+.skills .container > div > h3 {
+	margin: 0 0 30px;
+	font-weight: normal;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.skills .container > div > p {
+	line-height: 2;
+	color: #777;
+	text-align: center;
+	margin-bottom: 60px;
+}
+
+.skills .testimonials .content {
+	display: flex;
+	align-items: center;
+	margin-bottom: 30px;
+}
+
+.skills .testimonials .content img {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	margin-right: 50px;
+}
+
+@media (max-width: 767px) {
+	.skills .testimonials .content {
+		flex-direction: column;
+		text-align: center;
+
+	}
+	.skills .testimonials .content img {
+		margin: 0 auto 20px;
+	}
+}
+
+.skills .testimonials .text {
+	line-height: 1.8;
+	border-bottom: 1px solid #ccc;
+}
+
+.skills .testimonials .text p {
+	text-align: right;
+	font-size: 14px;
+	color: #777;
+	margin-bottom: 10px;
+}
+
+.skills .testimonials .bullets {
+	display: flex;
+	justify-content: center;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.skills .testimonials .bullets li {
+	width: 14px;
+	height: 14px;
+	border: 1px solid #aaa;
+	border-radius: 50%;
+	margin-right: 10px;
+}
+
+.skills .testimonials .bullets li.active {
+	background-color: var(--main-color);
+	border-color: var(--main-color);
+}
+/* end skills section style */
