--- a/css/kasper.css
+++ b/css/kasper.css
@@ -775,4 +775,49 @@ header nav .form i {
 	background-color: var(--main-color);
 	border-color: var(--main-color);
 }
+
+.skills .skill .progress-holder {
+	margin-bottom: 40px;
+}
+
+.skills .skill .progress-holder h4 {
+	margin-bottom: 15px;
+	font-weight: normal;
+	text-transform: uppercase;
+}
+
+.skills .skill .progress-holder .progress {
+	background-color: #dedadc;
+	height: 20px;
+}
+
+.skills .skill .progress-holder .progress span {
+	background-color: var(--main-color);
+	display: block;
+	height: 100%;
+	position: relative;
+}
+
+.skills .skill .progress-holder .progress span::before {
+	content: attr(data-progress);
+	position: absolute;
+	background-color: black;
+	color: white;
+	top: -40px;
+	right: -18px;
+	padding: 4px 0;
+	width: 40px;
+	text-align: center;
+	border-radius: 4px;
+}
+
+.skills .skill .progress-holder .progress span::after {
+	content: '';
+	position: absolute;
+	border-style: solid;
+	border-width: 6px;
+	border-color: black transparent transparent;
+	right: -4px;
+	top: -14px;
+}
 /* end skills section style */
