--- a/css/kasper.css
+++ b/css/kasper.css
@@ -821,3 +821,58 @@ header nav .form i {
 	top: -14px;
 }
 /* end skills section style */
+/* start quote section style */
+
+.quote {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+	background-image: url("../images/quote.jpg");
+	background-size: cover;
+	text-align: center;
+	position: relative;
+	color: white;
+}
+
+.quote::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0 0 0 / 75%);
+}
+
+.quote .container {
+	position: relative;;
+}
+
+.quote span {
+	margin-bottom: 20px;
+	font-size: 30px;
+}
+
+.quote p {
+	margin-top: 20px;
+	font-size: 18px;
+	position: relative;
+}
+
+.quote p::after {
+	content: '';
+	/* border: 1px solid var(--main-color); */
+	width: 80px;
+	height: 3px;
+	position: absolute;
+	bottom: -5px;
+	transform: translateX(-103%);
+	background-color: var(--main-color);
+}
+
+.quote .fa-quote-left, .quote .fa-quote-right {
+    vertical-align: top;
+    position: relative;
+	color: var(--main-color)
+  }
+
+/* start quote section style */
