--- a/css/kasper.css
+++ b/css/kasper.css
@@ -875,4 +875,36 @@ header nav .form i {
 	color: var(--main-color)
   }
 
-/* start quote section style */
+/* end quote section style */
+/* start pricing section style */
+
+.pricing {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+}
+
+.pricing .boxes {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	column-gap: 30px;
+}
+
+.pricing .boxes .box {
+	background-color: #fcfcfc;
+	text-align: center;
+}
+
+.pricing .boxes .box .head {
+	padding: 40px 20px;
+	border-top: 1px solid var(--main-color);
+	border-bottom: 1px solid var(--main-color);
+}
+
+.pricing .boxes .box .head h3 {
+	font-weight: normal;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+}
+
+/* start pricing section style */
+
