--- a/css/kasper.css
+++ b/css/kasper.css
@@ -906,5 +906,26 @@ header nav .form i {
 	margin-bottom: 20px;
 }
 
-/* start pricing section style */
+.pricing .boxes .box .head span {
+	font-size: 60px;
+	font-weight: bold;
+}
+
+.pricing .boxes .box .head span::before {
+	content: "$";
+	font-size: 25px;
+	position: relative;
+	top: -40px;
+	margin-right: 15px;
+	font-weight: normal;
+}
+
+.pricing .boxes .box .head span::after {
+	content: "/Mo";
+	font-size: 20px;
+	right: -15px;
+	position: relative;
+}
+
+/* end pricing section style */
 
