--- a/css/kasper.css
+++ b/css/kasper.css
@@ -927,5 +927,50 @@ header nav .form i {
 	position: relative;
 }
 
+.pricing .boxes .box ul {
+	border-bottom: 1px solid var(--main-color);
+}
+
+.pricing .boxes .box li {
+	padding: 15px;
+	position: relative;
+}
+
+.pricing .boxes .box ul li:not(:last-child)::after {
+	content: "";
+	width: 140px;
+	height: 1px;
+	background-color: var(--main-color);
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	bottom: 0;
+}
+
+.pricing .boxes .box .foot a {
+	display: block;
+	text-decoration: none;
+	padding: 15px 20px;
+	border: 1px solid var(--main-color);
+	width: fit-content;
+	margin: 30px auto;
+}
+
+.pricing .contact-us {
+	text-align: center;
+	font-size: 20px;
+	margin: 50px auto 20px;
+}
+
+.pricing .contact-link {
+	display: block;
+	background-color: var(--main-color);
+	width: fit-content;
+	margin:20px auto;
+	padding: 15px 30px;
+	color: white;
+	text-decoration: none;
+	border-radius: 3px;
+}
 /* end pricing section style */
 
