--- a/css/kasper.css
+++ b/css/kasper.css
@@ -984,3 +984,96 @@ header nav .form i {
 }
 /* end pricing section style */
 
+/* start subscribe section style */
+
+.subscribe {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+	background-image: url("../images/subscribe.jpg");
+	background-size: cover;
+	position: relative;
+	color: white;
+}
+
+.subscribe::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0 0 0 / 50%);
+}
+
+.subscribe .container {
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+
+@media (max-width: 991px) {
+	.subscribe .container {
+		flex-direction: column;
+	}
+}
+
+.subscribe .container form {
+	display: flex;
+	position: relative;
+	width: 500px;
+	max-width: 100%;
+}
+
+.subscribe .container form i {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 25px;
+
+}
+
+.subscribe .container form input[type="email"] {
+	border: 1px solid white;
+	border-right: none;
+	background: none;
+	padding: 20px 20px 20px 60px;
+	caret-color: var(--main-color);
+	color: white;
+	width: calc(100% - 130px);
+}
+
+.subscribe .container form input[type="submit"] {
+	width: 130px;
+	border: 1px solid white;
+	border-right: none;
+	background-color: var(--main-color);
+	padding: 10px 20px;
+	color: white;
+	text-transform: uppercase;
+}
+.subscribe .container form input[type="submit"]:hover {
+	background-color: #17b4e0;
+}
+
+.subscribe .container form input[type="email"]:focus,
+.subscribe .container form input[type="submit"]:focus {
+	outline: none;
+}
+
+.subscribe .container form ::placeholder {
+	color: white;
+}
+
+.subscribe p {
+	line-height: 2;
+	margin-left: 50px;
+	font-size: 16px;
+}
+
+@media (max-width: 991px) {
+	.subscribe p {
+	  margin: 30px 0 0;
+	}
+  }
+/* end subscribe section style */
+
