--- a/css/kasper.css
+++ b/css/kasper.css
@@ -114,10 +114,12 @@ ul {
 /* start header */
 
 header {
-	position: absolute;
+	position: fixed;
 	left: 0;
 	width: 100%;
-	z-index: 2;
+	z-index: 200;
+	background-color: #2b2b2b;
+
 }
 
 header .container {
@@ -193,7 +195,6 @@ header nav ul li a {
 	z-index: 2;
 }
 
-header nav ul li a.active,
 header nav ul li a:hover {
 	color : var(--main-color);
 	border-bottom: 1px solid var(--main-color);
@@ -222,7 +223,7 @@ header nav .form i {
 .landing {
 	min-height: 100vh;
 	background-color: #1f2021;
-	background-image: url(../images/landing_2.jpg);
+	background-image: url(../images/landing.jpg);
 	background-size: cover;
 	position: relative;
 }
@@ -598,7 +599,8 @@ header nav .form i {
 /* start about section style */
 
 .about {
-	margin-top: var(--section-padding);
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
 	overflow: hidden;
 	text-align: center;
 }
@@ -1175,3 +1177,57 @@ header nav .form i {
 	}
 }
 /* end contact-us section style */
+
+/* start footer section style */
+
+.footer {
+	padding-top: calc(var(--section-padding) / 2);
+	padding-bottom: calc(var(--section-padding) / 2);
+	background-image: url("/images/subscribe.jpg");
+	background-size: cover;
+	position: relative;
+	color: white;
+	text-align: center;
+}
+
+.footer::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(0 0 0 / 70%);
+}
+
+.footer .container {
+	position: relative;
+}
+
+.footer img {
+	margin-bottom: 20px;
+}
+
+.footer p:not(.copyright) {
+	text-transform: uppercase;
+	padding: 20px;
+	border-bottom: 1px solid white;
+	font-size: 22px;
+	width: fit-content;
+	margin: 20px auto;
+}
+
+.footer .social-icons i{
+	padding: 10px 15px;
+	color: var(--main-color);
+}
+
+.footer .copyright {
+	margin-top: 60px;
+}
+
+.footer span {
+	font-weight: bold;
+	color: var(--main-color);
+}
+/* end footer section style */
